fixed id number bug